@@ -2,10 +2,10 @@
 
 ACLOCAL = $(top_srcdir)/aclocal.sh
 
-noinst_LIBRARIES = libmpidep.a
+noinst_LTLIBRARIES = libmpidep.la
 
-libmpidep_a_SOURCES = mpidep.cc mpidep.hh
-libmpidep_a_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
+libmpidep_la_SOURCES = mpidep.cc mpidep.hh
+libmpidep_la_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
 
 
 MKDEP = gcc -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
