@@ -35,11 +35,12 @@ libmusic_la_SOURCES = \
 	FIBO.cc music/FIBO.hh music/message.hh \
 	music/interval.hh music/interval_tree.hh \
 	music/communication.hh \
+	music/predict_rank.hh predict_rank.cc \
 	music/version.hh version.cc
 
 libmusic_la_HEADERS = music.hh
 libmusic_la_CXXFLAGS = @MPI_CXXFLAGS@
-libmusic_la_LDFLAGS = \
+libmusic_la_LDFLAGS = $(top_builddir)/mpidep/libmpidep.la \
 	-version-info 1:0:0 -export-dynamic -Wl,-z,defs @MPI_LDFLAGS@
 libmusic_ladir = $(includedir)
 
@@ -73,6 +74,7 @@ musicinclude_HEADERS = music/runtime.hh music/setup.hh \
 		       music/collector.hh music/distributor.hh \
 		       music/cont_data.hh music/event.hh \
 		       music/message.hh music/music-config.hh \
+		       music/predict_rank.hh \
 		       music/communication.hh music/version.hh
 
 MKDEP = gcc -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
