@@ -1,0 +1,29 @@
+/*
+ *  This file is part of MUSIC.
+ *  Copyright (C) 2011 CSC, KTH
+ *
+ *  MUSIC is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ *  MUSIC is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#include "music/predict_rank.hh"
+
+#include "mpidep/mpidep.hh"
+
+namespace MUSIC {
+
+  int predictRank (int argc, char** argv) {
+    return getRank (argc, argv);
+  }
+
+}
