@@ -1,3 +1,10 @@
+2011-11-24  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* Makefile.am (libmusic_la_LDFLAGS): Added libmpidep.la in order
+	to support predictRank.
+
+	* music/predict_rank.hh, predict_rank.cc: New files.
+
 2011-01-31  Mikael Djurfeldt  <mdj@djurfeldt.com>
 
 	* Makefile.am (libmusic_c_la_DEPENDENCIES): Added in order to
